# examples-py-packaging

./: .gitignore  .mypy.ini  README.md
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: codeql.yml
apps/examples-packaging-pdm/: README.md  pyproject.toml
apps/examples-packaging-pdm/src/examples_packaging_pdm/console/: command.py
apps/examples-packaging-pipenv/: README.md
apps/examples-packaging-poetry/: README.md  pyproject.toml
apps/examples-packaging-poetry/src/examples_packaging_poetry/console/: command.py
apps/examples-packaging-rye/: README.md  pyproject.toml
apps/examples-packaging-rye/src/examples_packaging_rye/: __init__.py
apps/examples-packaging-rye/src/examples_packaging_rye/console/: command.py
apps/examples-packaging-setup/: README.md  setup.cfg
apps/examples-packaging-setup/src/examples_packaging_setup/console/: command.py
apps/examples-packaging-setup2/: README.md
apps/examples-packaging-setup2/src/examples_packaging_setup2/console/: command.py
docs/: README.md
docs/environment/: pip.md  pyenv-virtualenv.md  pyenv.md  venv.md
docs/packaging/: pdm.md  pipenv.md  poetry.md  rye.md  setuptools.md
docs/pep/: PEP440.md
src/examples-packaging-pdm/: README.md  pyproject.toml
src/examples-packaging-pipenv/: Pipfile  README.md
src/examples-packaging-pipenv/src/examples_packaging_pipenv/console/: command.py
src/examples-packaging-poetry/: README.md  pyproject.toml
src/examples-packaging-rye/: README.md  pyproject.toml
src/examples-packaging-rye/src/examples_packaging_rye/: __init__.py
src/examples-packaging-rye/src/examples_packaging_rye/console/: command.py
src/examples-packaging-setup/: README.md  setup.cfg  setup.py
src/examples-packaging-setup2/: README.md  pyproject.toml
