[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = []
description = "Default template for PDM package"
dynamic = ["version"]
license = {text = "MIT"}
name = "examples-packaging-pdm"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
examples-pdm-cli = "examples_packaging_pdm.console.command:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
path = "src/examples_packaging_pdm/__init__.py"
source = "file"

[tool.pdm.dev-dependencies]
dev = [
  "flake8>=7.1.0",
  "mypy>=1.11.0",
  "black>=24.4.2",
  "isort>=5.13.2",
  "pytest-cov>=5.0.0",
  "pyclean>=3.0.0",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.flake8]
ignore = "E203,E266,W503"
max-line-length = 119

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_strict_optional = true
python_version = "3.12"

[tool.pdm.scripts]
clean = "pyclean ."
format = "black ."
lint = "flake8"
test = "pytest"
