[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["A.suzuki <suzu.devworks@gmail.com>"]
description = ""
name = "examples-packaging-poetry"
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.11.0"
pyclean = "^3.0.0"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.black]
line-length = 119

[tool.isort]
include_trailing_comma = true
known_local_folder = ['config']
line_length = 119
multi_line_output = 3

[tool.flake8]
ignore = "E203,E266,W503"
max-line-length = 119

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_strict_optional = true
python_version = "3.12"

[tool.taskipy.tasks]
black = "black ."
clean = "pyclean ."
lint = "flake8 "
test = "pytest"
