[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = []
description = "Add your description here"
name = "examples-packaging-rye"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[tool.rye]
dev-dependencies = [
  "ruff>=0.5.4",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examples_packaging_rye"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = [
  "COM812",
  "COM819",
  "D100",
  "D203",
  "D213",
  "D300",
  "E111",
  "E114",
  "E117",
  "E203",
  "E266",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
select = ["ALL"]
