[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = []
description = "Add your description here"
name = "examples-packaging-rye"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[tool.rye]
dev-dependencies = [
  "ruff>=0.5.4",
  "mypy>=1.11.0",
  "pytest-cov>=5.0.0",
  "pyclean>=3.0.0",
]
managed = true

[tool.rye.scripts]
clean = "pyclean ."
format = "ruff format"
lint = {chain = ["lint:ruff", "lint:mypy"]}
"lint:mypy" = "mypy ."
"lint:ruff" = "ruff check"
test = "pytest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examples_packaging_rye"]

[tool.ruff]
line-length = 119

[tool.ruff.format]
docstring-code-format = true
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
ignore = []
# select = ["ALL"]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_strict_optional = true
python_version = "3.12"
