# See also: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = examples-packaging-setup
version = 0.1.0
description = "Python examples of packaging using setuptools."
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.11
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.packages.find]
where = src
exclude =
    tests*
