# See also: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = examples-packaging-setup
# See also: https://packaging.python.org/ja/latest/guides/single-sourcing-package-version/
version = attr: examples_packaging_setup.__version__
description = "Python examples of packaging using setuptools."
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.11
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.packages.find]
where = src
exclude =
    tests*
