# See also: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = examples-packaging-setup
# See also: https://packaging.python.org/ja/latest/guides/single-sourcing-package-version/
version = attr: examples_packaging_setup.__version__
description = "Python examples of packaging using setuptools."
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.11
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
dev =
    black>=24.4.0
    build>=1.2.0
    flake8>=7.0.0
    mypy>=1.11.0
    isort>=5.13.0
    pyclean

[isort]
line_length = 119
profile = "black"

[flake8]
extend-ignore = E203
max-line-length = 119

 [pylint]
 max-line-length = 119

# pyproject.toml only?
# [black]
# line-length = 119

 [mypy]
 warn_return_any = True
 warn_unused_configs = True

 [mypy-setuptools]
 ignore_missing_imports = True
