[project]
name = "examples-packaging-setup2"

description = "Python examples of packaging using setuptools."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.0"

dependencies = []

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.package-dir]
"examples_packaging_setup2" = "src/examples_packaging_setup2"

[tool.setuptools.packages.find]
exclude = ["tests*"]
where = ["src"]
