[project]
name = "examples-packaging-setup2"

description = "Python examples of packaging using setuptools."
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "examples_packaging_setup2.__version__"}

[tool.setuptools.package-dir]
"examples_packaging_setup2" = "src/examples_packaging_setup2"

[tool.setuptools.packages.find]
exclude = ["tests*"]
where = ["src"]
